src/assets/sass/custom/_devp.scss
/* ... */
.icn_passAbslt_password{
  float: right;
  margin-top: -34px;
}
.removePointer {
  cursor: initial !important;
}
.reposted_wrps + .textContent {
  padding-top: 20px;
}
.lps_bg_txt_white .botderBot:focus {
  border-bottom-color: #fd3398 !important;
}

.community-data-heading{
  color: #fd3398;
}
.pb25 {
  padding-bottom: 25px;
}
.up_arrow_wrp .tags_lip_inline img {
  width: 40px;
  opacity: 0.75;
}
.up_arrow_wrp > img {
  width: 28px;
  opacity: 0.75;
  margin-left: 15px;
}
.appearHere{
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  padding: 0 15px;
  min-height: calc(100vh - 70px);
  .lps_tb_para.wlcome {
    padding: 0 15px;
  }
}
.down_arrow_wrp {
  padding-bottom: 63px;
  text-align: right;
  .inline_img1 .lip_icn {
      width: 20px;
      margin: 0 5px;
      vertical-align: middle;
      opacity: 0.75;
  }
  .lip_icn {
      margin-right: 35px;
      margin-top: 25px;
      width: 28px;
      opacity: 0.75;
  }
}
.commonWidth {
    max-width: 335px;
    margin: 0 auto;
}
.lh30 {
    line-height: 30px !important;
}
.send-button{
  background-color: #E1E1E1;
}
.contactForm {
  input {
    color: #1a1a1a;
  }
  h5 {
    margin: 0;
  }
}
.calcelBtn {
  background: none;
  border: 0;
  padding: 0;
  cursor: pointer;
}
.contact-title{
  margin-bottom: 2px;
}
.fellowersIcon {
    margin-bottom: 26px;
    figure {
        width: 30px !important;
        height: 30px !important;
    }
    a {
        text-transform: initial !important;
        font-size: 16px;
        display: inline-block;
        vertical-align: top;
        line-height: 30px;
    }
}
.lps_xl_view .footer-menu-list {
  right: 20px;
  bottom: initial;
  top: 50%;
  transform: translateY(-50%);
  .ul_list.custom_ul {
    padding: 0;
  }
}
.commonSearchList {
	z-index: 999;
}
.boxIcon {
    margin-top: 14px !important;
}
.postBox {
  	min-height: 268px;
	.hightAuto {
		height: auto !important;
		min-height: auto !important;
		padding: 0;
	}
	a figure.feed_galary {
		height: auto !important;
		min-height: auto !important;
		background: none !important;
	}
	.newButton {
		padding: 0 15px !important;
	}
	.lps_widgets {
		bottom: 5px !important;
	}
}
.popup-custom-header {
    display: flex;
    flex-direction: column;
    .popup_close_header {
      width: 100%;
    }
}
.mobileShare {
    white-space: inherit !important;
}
@media screen and (max-width: 991px){
	.post_shape {
		min-height: 400px;
		display: flex;
		flex-direction: column;
		justify-content: flex-end;
		.post_img_block {
			margin-top: 0 !important;
		}
	}
	.newButton {
		padding-top: 0 !important;
	}
	.mobileModal .popup_cont {
		min-height: 410px;
  }
}
.mProfile p {
  margin-top: 16px !important;
}
.exploreSearch input, .exploreSearch span.input-group-addon {
  background: none !important;
  border-color: #fff !important;
}

.submit-cursor{
  cursor: pointer;
}

.footer-menu-list .collapsible {
  right: 5px;
  margin-top: 1px;
}

.home-modal{
  left: 0;
}
.back-button {
  margin-top: 20px;
}
.lps_header_link {
  position: relative;
  width: 100%;
   .lps_header_img {
    position: absolute;
    left: 15px;
  }
}


@media screen and (max-width: 767px){
  .back-button {
    left: 10px;
  }
}


@media screen and (max-width: 767px){
  .on_boarding_top {
    margin-top: 30px;
  }
}

.textarea-font-family{
  font-family: "Dosis", sans-serif !important;
  font-size: 17px;
}

@media screen and (max-width: 375px){
  .footer-menu-mobile{
    top: -10px;
  }
}

span.countBadge {
  padding: 3px 5px 3px 5px;
  display: inline-block;
  background-color: #000;
  min-width: 50px;
  text-align: center;
  font-size: 14px;
  color: #fff;
  border-radius: 5px;
  position: absolute;
  right: 64px;
  top: 7px;
}


@media screen and (max-width: 575px){
  span.countBadge {
    right: 40px;
  }
}

.lps_widgets .listed_item {
  position: relative;
}

.about_link{
  color: #fd3398 !important;
}

.btn_bold{
  font-weight: 600;
}

.notfication_lips_logo{
  background: #1a1a1a;
  padding: 0px;
  text-align: center;
  line-height: 66px;
}

.notfication_lips_logo img{
  width: 100%;
  height: 100%;
}
.themeOutlineLight {
    background-color: transparent;
    color: #f8f9fa;
    border: 1px solid #f8f9fa;
    margin: 0 10px 8px 0;
    padding: 5px 8px;
    display: inline-block;
    background-image: none;
    vertical-align: middle;
    font-size: 16px;
    line-height: 1.3;
    border-radius: 5px;
    letter-spacing: 1.8px;
    transition: all,.4s,ease-in-out;
    cursor: pointer;
    &:hover, &:focus {
      background-color: #f8f9fa;
      border-color: #f8f9fa;
      color: #212529;
    }
    &.active {
      color: #212529;
      background-color: #f8f9fa!important;
      border-color: #f8f9fa;
    }
}

.access_button{
  min-width: 130px !important;
}

.lps_bg_txt_white{
  .access_input:focus{
    border-bottom-color: #fd3398 !important;
  }
}

.article_desktopView {
  text-align: left;
  max-width: 90%;
  margin: 0 auto;
  .ifAccess {
    .form_group_modify {
      margin-left: 0;
      width: 100%;
      input.input_modify.input_brdrBtnmP {
        padding: 0;
      }
    }

  }
}
.lps_heading{
  margin-top: 30px;
}
@media screen and (max-width: 1024px){
.lps_arrow_approval{
  z-index: 100;
}
}

.plans_mobile_top{
  margin-top: 15px;
}

.lps_fields.access-code-data{
  max-width: 510px !important;
}

.popup_cont{
  .homeModalLogo{
    width: auto !important;
    transform: inherit !important;
  }
  .lps_top_imgs{
    background: transparent !important;
  }
}

.lps_neon_pink_border{
  border: 1px solid #FF6EC7;
}

@media screen and (max-width: 768px){
  .post_links_tags{
    position: absolute;
    bottom: 30px;
    left: auto;
    right: auto;
    width: 100%;
  }
}

